Fixed the align issue on checkout page

--- a/src/styles/CustomerInformation.css
+++ b/src/styles/CustomerInformation.css
@@ -126,90 +126,6 @@ color: #2C1C59;
 }
 
 /* toppng 1 */
-#basic-addon1 {
-  height: 2.4em;
-  left: 25em;
-  right: 0em;
-  top: 0em;
-
-  /* background: url(toppng.png); */
-}
-
-.credit-card-i {
-  margin: 2em;
-  padding: 2em;
-  justify-content: 1em;
-  font-size: larger;
-}
-
-/* NAME ON CARD */
-.credit-card-info {
-  /* Search bar */
-
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  /* identical to box height */
-
-  letter-spacing: 0.0125em;
-  text-transform: uppercase;
-
-  /* Grey */
-
-  color: #929292;
-}
-
-/* image 10 */
-#basic-addon2 {
-  position: relative;
-
-  width: 4em;
-
-  /* background: url(image.png); */
-}
-
-/* BILLING ADDRESS */
-.billing-address {
-  height: 17px;
-  left: 25px;
-  right: 443px;
-  top: 436px;
-
-  /* Overline */
-
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 17px;
-  /* identical to box height */
-
-  letter-spacing: 0.015em;
-  text-transform: uppercase;
-
-  /* Purple */
-
-  color: #2c1c59;
-}
-
-/* Same as shipping address */
-.billing-placeholder {
-  position: absolute;
-
-  /* Sub Filter */
-
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 17px;
-  line-height: 21px;
-
-  /* Black - Text Color */
-
-  color: #1e1e1e;
-}
 
 /* CONTINUE TO SHIPPING METHOD */
 .cont-shipping-method {
