--- a/src/styles/ShippingMethod.css
+++ b/src/styles/ShippingMethod.css
@@ -26,7 +26,7 @@
 .shipping-method-form {
   /* justify-content: space-around; */
   /* margin-bottom: 2.5em; */
-
+margin-top: 1em;
   /* padding-left: 1em; */
   /* padding-right: 2.8em; */
 }
@@ -107,10 +107,12 @@ top: 0.8em;
 
 /* Continue to Payment */
 .cont-pmt {
-  margin-left: 17.2em;
+   margin-left: 16.5em;
+  width: 45%;
+  /* margin-left: 10.85em; */
   margin-bottom: 1em;
   /* float: right; */
-
+position: block;
   /* Button */
 
   font-family: Montserrat;
